支持基本的拖放元素到节点和最外层根那里

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Temp/*
 .idea/.idea.UnityBookMarkSystem/.idea/projectSettingsUpdater.xml
 .idea/.idea.UnityBookMarkSystem/.idea/vcs.xml
 .idea/.idea.UnityBookMarkSystem/riderModule.iml
+.idea/.idea.UnityBookMarkSystem/.idea/indexLayout.xml
