--- a/UnityBookMarkSystem.Editor.csproj
+++ b/UnityBookMarkSystem.Editor.csproj
@@ -314,6 +314,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\LinBookMark\Data\LinBookMarkElement.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\DragDrop\BookMarkDragDropHandler.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\DragDrop\IDragDropHandler.cs" />
     <Compile Include="Assets\Editor\LinBookMark\LinBookMarkTreeView.cs" />
     <Compile Include="Assets\Editor\LinBookMark\LinBookMarkWindow.cs" />
     <Compile Include="Assets\Editor\TreeDataModel\TreeElement.cs" />
