--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\LinBookMark\BookMarkTreeBuilder.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Data\BookMarkDataCenter.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Data\LinBookMarkElement.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Data\TreeItemIdGenerator.cs" />
     <Compile Include="Assets\Editor\LinBookMark\DragDrop\BookMarkDragDropHandler.cs" />
