--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Editor\LinBookMark\BookMarkTreeBuilder.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Commands\BookMarkCreateCommand.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Data\BookMarkDataCenter.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Data\DataSaver.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Data\ExpandData.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Data\ExpandDataMgr.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Data\LinBookMarkElement.cs" />
