add handle commandsEvent

--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Assets\Editor\LinBookMark\Data\ExpandDataMgr.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Data\LinBookMarkElement.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Data\TreeItemIdGenerator.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\DragDrop\AssetOperationUtil.cs" />
     <Compile Include="Assets\Editor\LinBookMark\DragDrop\BookMarkDragDropHandler.cs" />
     <Compile Include="Assets\Editor\LinBookMark\DragDrop\IDragDropHandler.cs" />
     <Compile Include="Assets\Editor\LinBookMark\InputHandle\TreeViewInputHandler.cs" />
