不是工程资源节点的互相拖动

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Temp/*
 .idea/.idea.UnityBookMarkSystem/.idea/vcs.xml
 .idea/.idea.UnityBookMarkSystem/riderModule.iml
 .idea/.idea.UnityBookMarkSystem/.idea/indexLayout.xml
+*obj\
