feat  增加从hierarchy 拖放对象到文件夹节点下创建prefab的功能

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll
 Assets/Plugins/Editor/JetBrains.meta
 Assets/Plugins/Editor/JetBrains.meta
 Assembly-CSharp-Editor.csproj
+.idea/.idea.UnityBookMarkSystem/.idea/indexLayout.xml
