--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -95,9 +95,11 @@
     <Compile Include="Assets\Editor\LinBookMark\DragDrop\IDragDropHandler.cs" />
     <Compile Include="Assets\Editor\LinBookMark\GUIStyles\BookMarkGUIStyles.cs" />
     <Compile Include="Assets\Editor\LinBookMark\InputHandle\TreeViewInputHandler.cs" />
-    <Compile Include="Assets\Editor\LinBookMark\LinBookMarkTreeView.cs" />
-    <Compile Include="Assets\Editor\LinBookMark\LinBookMarkWindow.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Interface\ISplittableWindow.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Util\BookMarkGuiUtil.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Views\LinBookMarkTreeView.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Views\LinBookMarkWindow.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Views\WindownSplitterDrawer.cs" />
     <Compile Include="Assets\Editor\TreeDataModel\TreeElement.cs" />
     <Compile Include="Assets\Editor\TreeDataModel\TreeElementUtility.cs" />
     <Compile Include="Assets\Editor\TreeDataModel\TreeModel.cs" />
