--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -229,12 +229,14 @@
     <Compile Include="Assets\Editor\LinBookMark\DragDrop\DragDropUtil.cs" />
     <Compile Include="Assets\Editor\LinBookMark\DragDrop\IDragDropHandler.cs" />
     <Compile Include="Assets\Editor\LinBookMark\GUIStyles\BookMarkGUIStyles.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\InputHandle\AssetClickManager.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\InputHandle\IAssetClickHandler.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\InputHandle\SpriteAssetClickHandler.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\InputHandle\TextureAssetClickHandler.cs" />
     <Compile Include="Assets\Editor\LinBookMark\InputHandle\TreeViewInputHandler.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Interface\IAssetDrawer.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Interface\ISplittableWindow.cs" />
     <Compile Include="Assets\Editor\LinBookMark\IO\FileUtil.cs" />
-    <Compile Include="Assets\Editor\LinBookMark\IO\IAssetClickHandler.cs" />
-    <Compile Include="Assets\Editor\LinBookMark\IO\TextureAssetClickHandler.cs" />
     <Compile Include="Assets\Editor\LinBookMark\TreeBuilder\BookMarkTreeBuilder.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Util\BookMarkGuiUtil.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Views\AssetDrawers\DefaultAssetDrawer.cs" />
