--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Assets\Editor\LinBookMark\Interface\IAssetDrawer.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Interface\ISplittableWindow.cs" />
     <Compile Include="Assets\Editor\LinBookMark\IO\FileUtil.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Menu\FolderMenuOptions.cs" />
     <Compile Include="Assets\Editor\LinBookMark\TreeBuilder\BookMarkTreeBuilder.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Util\BookMarkGuiUtil.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Views\AssetDrawers\DefaultAssetDrawer.cs" />
