--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Assets\Editor\LinBookMark\Interface\IAssetDrawer.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Interface\ISplittableWindow.cs" />
     <Compile Include="Assets\Editor\LinBookMark\IO\FileUtil.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Menu\AssetGridContextOptions.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Menu\AssetMarksMenuOptions.cs" />
     <Compile Include="Assets\Editor\LinBookMark\TreeBuilder\BookMarkTreeBuilder.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Util\BookMarkGuiUtil.cs" />
