--- a/KyleBookMark.csproj
+++ b/KyleBookMark.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Assets\Editor\LinBookMark\Views\AssetListGridView.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Views\AssetListTreeView.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Views\FolderAssetListView.cs" />
+    <Compile Include="Assets\Editor\LinBookMark\Views\LinBookMarkSettingWnd.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Views\LinBookMarkTreeView.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Views\LinBookMarkWindow.cs" />
     <Compile Include="Assets\Editor\LinBookMark\Views\WindownSplitterDrawer.cs" />
