--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Assets/Plugins/Editor/JetBrains.meta
 Assets/Plugins/Editor/JetBrains.meta
 Assembly-CSharp-Editor.csproj
 .idea/.idea.UnityBookMarkSystem/.idea/indexLayout.xml
+LinkBookMarkDLL/.vs/
